[metadata]
name = road-stitching
version = attr: stitching.__version__
description = A Python package for fast and robust Image Stitching
long_description = file: README.md
long_description_content_type = text/markdown
author = FengFengmomo
author_email = l.a.weber@outlook.de
license = Apache License 2.0
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3 :: Only
project_urls =
	Source = https://github.com/FengFengmomo/road-stitching
    Bug Tracker = https://github.com/FengFengmomo/road-stitching/issues

[options]
packages = find:
install_requires =
    opencv-python>=4.0.1
	largestinteriorrectangle
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    stitch = stitching.cli.stitch:main

[options.packages.find]
exclude = tests
